# vela-tcad

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/agents/: vela-architecture-analyst.agent.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
bindings/: pyvela.cpp
cmake/: CheckAscii.cmake
docs/: README.md  agent_handoff_baseline_2026-05-13.md  architecture.md  config_schema.md  development_poisson_unit_scaling.md  examples.md  multi_agent_merged_backlog_2026-05-13.md  pn2d_bv_avalanche_branch_continuation_plan.md  pn2d_iv_future_plan.md  pn2d_iv_p0_followup_tasks_20260527.md  pn2d_script_dedup_plan.md  sentaurus_import.md  sentaurus_vm_ssh_workflow.md  weekly_development_summary_2026-05-14.md
docs/validation/: bv_impact_ionization_theory.md  igbt2d_unit_scaling_validation.md  ldmos2d_unit_scaling_validation.md  nmos2d_unit_scaling_validation.md  pmos2d_unit_scaling_validation.md  pn2d_bv_current_progress_summary.md  pn2d_bv_validation.md  pn2d_sentaurus_comparison.md  pn_diode_unit_scaling_validation.md
examples/: pn_diode_2d.json  pn_poisson_2d.json
examples/igbt2d/: mesh_unit_scaling.json  simulation_bv.json  simulation_bv_ii.json  simulation_bv_ii_unit_scaling.json  simulation_bv_unit_scaling.json  simulation_charge_cv.json  simulation_charge_cv_unit_scaling.json  simulation_high_injection_iv.json  simulation_high_injection_iv_unit_scaling.json  simulation_iv.json  simulation_iv_unit_scaling.json  simulation_poisson.json
examples/ldmos2d/: mesh.json  mesh_fieldplate.json  mesh_fieldplate_unit_scaling.json  mesh_unit_scaling.json  simulation_bv.json  simulation_bv_fieldplate.json  simulation_bv_fieldplate_unit_scaling.json  simulation_bv_unit_scaling.json  simulation_dd_iv.json  simulation_dd_iv_unit_scaling.json  simulation_iv.json
examples/ldmos2d_poisson/: mesh.json  simulation.json
examples/moscap/: mesh.json  simulation.json  simulation_cv.json
examples/nmos2d/: simulation.json
examples/nmos2d_dd/: simulation.json  simulation_cv.json  simulation_idvg.json  simulation_iv.json
examples/nmos2d_mos_dd/: mesh.json  simulation_bv.json  simulation_cv.json  simulation_idvg.json  simulation_idvg_surface.json  simulation_iv.json
examples/pmos2d_dd/: mesh.json  simulation.json  simulation_cv.json  simulation_idvg.json  simulation_iv.json
examples/pmos2d_mos_dd/: mesh.json  simulation_bv.json  (+3 more)
reference_tcad/: README.md
scripts/: align_gava_hotspots_common_locations.py  analyze_iter_b.py  analyze_iter_c.py  analyze_pn2d_anchor_probe.py  analyze_pn2d_iv_transport_shape.py  analyze_stage0.py  analyze_stage2_step.py  audit_current_density_export_path.py  audit_current_density_vectors.py  audit_edge_current_decomposition.py  audit_edge_current_effective_density.py  audit_geometry_projection.py  audit_pn2d_bv_impact_parameters.py  audit_self_max_cell_dual_face_ls_sensitivity.py  audit_sg_edge_current_formula_sweep.py  build_node7_residual_probe.py  compare_electric_field_recovery.py  compare_internal_edge_source_vs_sentaurus.py  compare_pn2d_0v_current_related_quantities.py  compare_pn2d_0v_electric_field.py  compare_pn2d_0v_electric_field_symmetry.py  compare_pn2d_0v_state.py  compare_pn2d_bv_multibias_fields.py  compare_pn2d_bv_newton_history.py  compare_pn2d_bv_sg_edge_source_dump.py  compare_reference_curves.py  compare_refine_ionization_integral.py  compare_sentaurus_fields.py  compare_sentaurus_tdr_tdx.py  compare_vanoverstraeten_raw_alpha.py  compute_bv_iv_rms_minus20.py  convert_tcad_export.py  decompose_dual_face_flux_for_hotspot.py  decompose_gava_hotspots.py  diagnose_dual_face_vector_current_gava_reconstruction.py  diagnose_edge_to_cell_vector_current_reconstruction.py  diagnose_pn2d_0v_contact_state.py  diagnose_pn2d_0v_current_balance.py  diagnose_pn2d_0v_density_decomposition.py  diagnose_pn2d_0v_field_conventions.py  (+171 more)
tests/: test_bernoulli.cpp  test_boundary_conditions.cpp  test_box_geometry.cpp  test_cell_reconstructed_avalanche.cpp  test_csv_utils.cpp  test_dc_sweep.cpp  test_dd_gummel.cpp  test_device_stability.cpp  test_electric_field_diagnostics.cpp  test_external_state.cpp  test_gummel_high_doping.cpp  test_impact_ionization.cpp  test_ldmos_dd.cpp  test_line_search_backtrack_failure.cpp  test_linear_solver.cpp  test_mesh.cpp  test_mobility.cpp  test_mos_interface_charge.cpp  test_mos_mixed_material.cpp  test_mos_solver_crosscheck.cpp  test_newton_solver.cpp  test_poisson.cpp  test_poisson_neumann.cpp  test_pseudo_arclength.cpp  test_recombination.cpp  test_scaling.cpp  test_schottky_contact.cpp  test_sentaurus_tdr_reader.cpp  test_sg_flux.cpp  test_solution_validation.cpp  test_stored_charge.cpp
wsl-build/: CTestTestfile.cmake  DartConfiguration.tcl  test_bernoulli  test_bernoulli_include-b12d07c.cmake  test_bernoulli_tests-b12d07c.cmake  test_box_geometry  test_box_geometry_include-b12d07c.cmake  test_box_geometry_tests-b12d07c.cmake  test_dc_sweep_include-b12d07c.cmake  test_dc_sweep_tests-b12d07c.cmake  test_dd_gummel  test_dd_gummel_include-b12d07c.cmake  test_dd_gummel_tests-b12d07c.cmake  test_device_stability  test_device_stability_include-b12d07c.cmake  test_device_stability_tests-b12d07c.cmake  test_electric_field_diagnostics  test_electric_field_diagnostics_include-b12d07c.cmake  test_electric_field_diagnostics_tests-b12d07c.cmake  test_gummel_high_doping  test_gummel_high_doping_include-b12d07c.cmake  test_gummel_high_doping_tests-b12d07c.cmake  test_impact_ionization  test_impact_ionization_include-b12d07c.cmake  test_impact_ionization_tests-b12d07c.cmake  test_line_search_backtrack_failure  test_line_search_backtrack_failure_include-b12d07c.cmake  test_line_search_backtrack_failure_tests-b12d07c.cmake  test_linear_solver  test_linear_solver_include-b12d07c.cmake  test_linear_solver_tests-b12d07c.cmake  test_mesh  test_mesh_include-b12d07c.cmake  test_mesh_tests-b12d07c.cmake  test_mobility  test_mobility_include-b12d07c.cmake  test_mobility_tests-b12d07c.cmake  test_mos_solver_crosscheck  test_mos_solver_crosscheck_include-b12d07c.cmake  test_mos_solver_crosscheck_tests-b12d07c.cmake  (+18 more)
(+617 files in other folders)
